--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="index.css">
   
   <title>Frontend Mentor | Tip calculator app</title>
 
@@ -15,30 +19,42 @@
   </style>
 </head>
 <body>
+<header class="header">
+  <h1 class="title">Splitter</h1>
+</header>
+<main>
+  <div class="calculator">
 
-  Bill
+    Bill
 
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
+    Select Tip %
+    5%
+    10%
+    15%
+    25%
+    50%
+    Custom
 
-  Number of People
+    Number of People
+    <div class="calculator__results">
+      <h3 class="calculator__results_title tip-title">Tip Amount</h3>
+      <p class="calculator__results_subtitle tip-subtitle">/ person</p>
+      <h2 class="calculator__results_amount calculated-tip">$0</h2>
 
-  Tip Amount
-  / person
+      <h3 class="calculator__results_title total-title">Total</h3>
+      <p class="calculator__results_subtitle total-subtitle">/ person</p>
+      <h2 class="calculator__results_amount calculated-total">$0</h2>
 
-  Total
-  / person
-
-  Reset
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <button class="calculator__results-reset">Reset</button>
+    </div>
   </div>
+</main>
+<footer>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/clelzey" target="_blank">Asteria</a>.
+  </div>
+</footer>
+<script src="index.js"></script>
 </body>
 </html>
