Completed styling of results area.

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     <div class="calculator__results">
       <h3 class="calculator__results_title tip-title">Tip Amount</h3>
       <p class="calculator__results_subtitle tip-subtitle">/ person</p>
-      <h2 class="calculator__results_amount calculated-tip">$0</h2>
+      <h2 class="calculator__results_amount calculated-tip">$4.27</h2>
 
       <h3 class="calculator__results_title total-title">Total</h3>
       <p class="calculator__results_subtitle total-subtitle">/ person</p>
-      <h2 class="calculator__results_amount calculated-total">$0</h2>
+      <h2 class="calculator__results_amount calculated-total">$32.79</h2>
 
-      <button class="calculator__results-reset">Reset</button>
+      <button class="calculator__results-reset btn btn-active">RESET</button>
     </div>
   </div>
 </main>
