--- a/index.html
+++ b/index.html
@@ -12,15 +12,10 @@
   
   <title>Frontend Mentor | Tip calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 <header class="header">
-  <h1 class="title">Splitter</h1>
+  <img src="./images/logo.svg" alt="">
 </header>
 <main>
   <div class="calculator">
@@ -31,13 +26,18 @@
 
       <p class="calculator__inputs_titles">Select Tip %</p>
       <div class="calculator__inputs_percentages">
-        <button class="calculator__inputs_percent_btn btn">5%</button>
-        <button class="calculator__inputs_percent_btn btn">10%</button>
-        <button class="calculator__inputs_percent_btn btn btn-active">15%</button>
-        <button class="calculator__inputs_percent_btn btn">25%</button>
-        <button class="calculator__inputs_percent_btn btn">50%</button>
+        <button class="calculator__inputs_percent_btn btn" value="5">5%</button>
+        <button class="calculator__inputs_percent_btn btn" value="10">10%</button>
+        <button class="calculator__inputs_percent_btn btn btn-active" value="15">15%</button>
+        <button class="calculator__inputs_percent_btn btn" value="25">25%</button>
+        <button class="calculator__inputs_percent_btn btn" value="50">50%</button>
         <label for="custom-percent" hidden></label>
-        <input class="calculator__inputs_input custom-percent" id="custom-percent" type="number" placeholder="Custom">
+        <input class="calculator__inputs_input custom-percent"
+               id="custom-percent"
+               type="number"
+               min="0"
+               max="100"
+               placeholder="Custom">
       </div>  <!-- end calculator__input_percentages-->
 
       <label class="calculator__inputs_titles" for="num-plp" >Number of People</label>
